--- a/users.yml
+++ b/users.yml
@@ -1,14 +1,26 @@
 ---
-- hosts: all
-  become: yes
+- hosts: webservers
+  vars:
+    http_port: 80
+    max_clients: 200
+  remote_user: root
   tasks:
-  - name: Add service accounts
-    user:
-      name: "{{ item }}"
-      comment: service account
-      create_home: no
-      shell: /usr/sbin/nologin
-      state: present
-    loop:
-    - testuser1
-    - testuser2
+  - name: ensure apache is at the latest version
+    yum:
+      name: httpd
+      state: latest
+  - name: write the apache config file
+    template:
+      src: /srv/httpd.j2
+      dest: /etc/httpd.conf
+    notify:
+    - restart apache
+  - name: ensure apache is running
+    service:
+      name: httpd
+      state: started
+  handlers:
+    - name: restart apache
+      service:
+        name: httpd
+        state: restarted
